--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@aws-amplify/ui-components": "^1.9.6",
     "@aws-amplify/ui-react": "^2.3.0",
+    "@emotion/core": "^11.0.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -19,6 +20,8 @@
     "react-currency-format": "^1.0.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.26.1",
+    "react-loading": "^2.0.3",
+    "react-pure-loaders": "^3.0.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
