--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@aws-amplify/ui-components": "^1.9.6",
     "@aws-amplify/ui-react": "^2.3.0",
     "@emotion/core": "^11.0.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.21.3",
     "aws-amplify": "^4.3.12",
     "country-list": "^2.2.0",
     "country-state-city": "^3.0.1",
@@ -23,13 +25,14 @@
     "react-loading": "^2.0.3",
     "react-pure-loaders": "^3.0.1",
     "react-redux": "^7.2.6",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "^5.0.1",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "use-step-animation": "^1.0.0",
     "web-vitals": "^2.1.2",
-    "webpack": "^5.72.0"
+    "webpack": "^5.73.0"
   },
   "scripts": {
     "start": "react-scripts start",
