--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "use-step-animation": "^1.0.0",
-    "web-vitals": "^2.1.2",
-    "webpack": "^5.73.0"
+    "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
